Fix spacing and sanitize

--- a/src/_sanitize.scss
+++ b/src/_sanitize.scss
@@ -69,5 +69,6 @@ select,
 textarea {
   color: inherit;
   font-size: inherit;
+  font-family: inherit;
   line-height: inherit;
 }
